--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,6 +59,16 @@
   }
 }
 
+@font-face {
+  font-family: "Tanker-Regular";
+  src: url("../../public/fonts/Tanker-Regular.ttf") format("woff2"),
+    url("../../public/fonts/Tanker-Regular.woff") format("woff"),
+    url("../../public/fonts/Tanker-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
 @layer base {
   * {
     @apply border-border;
